--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	transition: 300ms linear;
 }
 body {
-	background-color: #2c2d2f;
+	background-color: #040f01;
 	color: #fff;
 	height: 100vh;
 	display: flex;
@@ -30,19 +30,19 @@ body {
 .show {
 	margin: auto;
 	display: block;
-	padding: 10px 25px;
+	padding: 10px 35px;
 	font-size: 20px;
 	color: white;
-	background-color: #1b6ef3;
+	background-color: #03a054;
 	border: none;
 	border-radius: 10px;
 	cursor: pointer;
 }
 .show:hover {
-	background-color: #044ec6;
+	background-color: #038e4a;
 }
 .show:active {
-	transform: scale(0.7);
+	transform: scale(0.8);
 }
 /* ! user */
 .user {
@@ -58,5 +58,5 @@ body {
 	width: 120px;
 	margin-bottom: 10px;
 	border: 5px solid #fff;
-	box-shadow: 0 0 10px;
+	box-shadow: 0 0 10px, 5px 0 20px #10b333;
 }
